<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".ActivityMain">
<EditText
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:hint="@string/edit_name"
    android:inputType="text"/>
<EditText
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:hint="@string/edit_phone"
    android:inputType="phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scholarship"
        android:textColor="@color/colorBlack"/>
    <Spinner
        android:id="@+id/main_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women"
            />
        <RadioButton
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            />

    </RadioGroup>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:textColor="@color/colorBlack"/>
</LinearLayout>